--- a/about/index.html
+++ b/about/index.html
@@ -5,11 +5,12 @@ title: About Ankit Rana
 
 		<div class="about">
 			<h1>About</h1>
-			<p> Currently i work with Seagate Technology in their software department for their storage clusters. I have been keen in learning new technology .My one of interest is Nosql databases.</p>
-			<p> I completed my Bachelor of Technology in computer science from Graphic Era University,Dehradun in 2014. Then i moved to pune to pursue my post graduate diploma at Cdac,Pune.</p>
+			<p> Currently working as a Openstack developer, I am an Python Enthusiast with over five years of experience of building High Performance Storage Platform and Cloud Platform</p>
+			<p>I have been keen interest in exploring new technologies like NOSQL databases(MongoDB), MessageBroker(RabbitMQ), Configuration Management System(Puppet) </p>
+			<p>I completed my Bachelor of Technology in computer science from Graphic Era University,Dehradun in 2014. Then i moved to pune to pursue my Post Graduate Diploma at Cdac,Pune.</p>
 			<p>Most of my childhood was spent in Dehradun where i did my schooling from St. Mary's Convent School</p>
 			<p>I am a part of PythonPune meetup group where i had presented many talks and workshop on web frameworks.</p>
-			<p>I like to listen to arijit singh's songs , watch TV series like Mr. Robot and play table tennis in my free time.</p>
+			<p>I like to listen to songs , watch TV series and play Football in my free time.</p>
 
 			<ul class="contacts">
 				<li><a href="http://www.meetup.com/PythonPune/">pythonpune</a></li>
