--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: About Ankit Rana
 		<div class="about">
 			<h1>About</h1>
 			<p> Currently working as a Openstack developer, I am an Python Enthusiast with over five years of experience of building High Performance Storage Platform and Cloud Platform</p>
-			<p>I have been keen interest in exploring new technologies like NOSQL databases(MongoDB), MessageBroker(RabbitMQ), Configuration Management System(Puppet) </p>
+			<p>I am a Certified Kubernetes Adminitrator. I have keen interest in exploring new technologies like Containers, Kubernetes, NOSQL databases(MongoDB), MessageBroker(RabbitMQ), Configuration Management System(Puppet, Ansible) </p>
 			<p>I completed my Bachelor of Technology in computer science from Graphic Era University,Dehradun in 2014. Then i moved to pune to pursue my Post Graduate Diploma at Cdac,Pune.</p>
 			<p>Most of my childhood was spent in Dehradun where i did my schooling from St. Mary's Convent School</p>
 			<p>I am a part of PythonPune meetup group where i had presented many talks and workshop on web frameworks.</p>
